force-app/main/default/objects/TW4_Nonconformity__c/TW4_Nonconformity__c.object-meta.xml
<CustomObject>
    <label>Nonconformity</label>
    <nameField>
        <displayFormat>NC-{000000}</displayFormat>
        <label>Nonconformity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nonconformities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>