force-app/main/default/objects/TW4_Nonconformity__c/fields/T_Reference__c.field-meta.xml
<CustomField>
    <fullName>T_Reference__c</fullName>
    <label>Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leadership and Commitment</fullName>
            </value>
            <value>
                <fullName>Resources and Organization</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Management of Changes</fullName>
            </value>
            <value>
                <fullName>Subcontractors Management</fullName>
            </value>
            <value>
                <fullName>Emergency Preparedness and Response</fullName>
            </value>
            <value>
                <fullName>Monitoring, performance evaluation and improvements</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>