force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Disapproval_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW4_Disapproval_Reason__c</fullName>
    <label>Appraisal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>