force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Interaction__c.field-meta.xml
<CustomField>
    <fullName>TW4_Interaction__c</fullName>
    <label>Interaction</label>
    <referenceTo>TW1_Interaction__c</referenceTo>
    <relationshipLabel>Nonconformities</relationshipLabel>
    <relationshipName>Nonconformities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>