force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Location__c.field-meta.xml
<CustomField>
    <fullName>TW4_Location__c</fullName>
    <label>Area or Sector Audited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>