force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Nonconformity_Description__c.field-meta.xml
<CustomField>
    <fullName>TW4_Nonconformity_Description__c</fullName>
    <label>Nonconformity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>