force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Nonconformity_Status__c.field-meta.xml
<CustomField>
    <fullName>TW4_Nonconformity_Status__c</fullName>
    <label>Nonconformity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>