force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Nonconformity_Validation_Filled__c.field-meta.xml
<CustomField>
    <fullName>TW4_Nonconformity_Validation_Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nonconformity Validation Filled</label>
    <type>Checkbox</type>
</CustomField>