force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Objective_Evidence__c.field-meta.xml
<CustomField>
    <fullName>TW4_Objective_Evidence__c</fullName>
    <label>Objective Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>