force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Observation__c.field-meta.xml
<CustomField>
    <fullName>TW4_Observation__c</fullName>
    <label>Observation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>