force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Preventive_Action__c.field-meta.xml
<CustomField>
    <fullName>TW4_Preventive_Action__c</fullName>
    <label>Preventive Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>