force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Reference__c.field-meta.xml
<CustomField>
    <fullName>TW4_Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>