force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>TW4_Root_Cause_Analysis__c</fullName>
    <label>Root Cause Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>