force-app/main/default/objects/TW4_Nonconformity__c/fields/TW4_Supplier_Action_Instruction__c.field-meta.xml
<CustomField>
    <fullName>TW4_Supplier_Action_Instruction__c</fullName>
    <label>Supplier Action Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As you complete to fill all nonconformities actions, please go back to your Action Plan Step and click on &quot;Send Action Plan&quot;.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>