force-app/main/default/objects/TW4_Nonconformity__c/validationRules/CantReproveNonconformityWithoutDisReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CantReproveNonconformityWithoutDisReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(TW4_Nonconformity_Status__c),
  ISPICKVAL(TW4_Nonconformity_Status__c, &quot;Reproved&quot;),
 ISBLANK(TW4_Disapproval_Reason__c) 	
				)</errorConditionFormula>
    <errorMessage>You can&apos;t disapprove this nonconformity without a Disapproval Reason.</errorMessage>
</ValidationRule>