force-app/main/default/objects/TW4_Nonconformity__c/validationRules/SupplierCantChangeNonConfApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>SupplierCantChangeNonConfApproved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

				
				OR(
								ISPICKVAL(TW4_Nonconformity_Status__c, &quot;Approved&quot;),
								NOT(ISPICKVAL(TW4_Interaction__r.TW1_Status__c, &quot;Awaiting Action Plan&quot;)),
								ISCHANGED(TW4_Corrective_Action__c),
								ISCHANGED( TW4_Preventive_Action__c )
								),

    $User.ProfileId =  CASESAFEID(&quot;$Setup.ID_Profile__c.ID_Profile_Supplier__c&quot;)
				)</errorConditionFormula>
    <errorMessage>You cannot change a Nonconformity if it is already Approved.</errorMessage>
</ValidationRule>